--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ table {
  		document.calculadora.caja.value="";	
  	}
  	function memoria(){
- 		if(resul=="."){
+ 		if(resul=="." || resul =="Infinity"){
  			alert("No hay ningun valor en memoria")
  		}
  		else{
